--- a/index.ipynb
+++ b/index.ipynb
@@ -112,6 +112,15 @@
     "## Summary\n",
     "Great work! We are well on our way to mastering Jupyter notebooks! We practiced reassigning variables, running cells, and checking our outputs."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test = None"
+   ]
   }
  ],
  "metadata": {
